# android-compass

./: build.gradle
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/mrap/compass/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Canvas.cpp  Canvas.h  Container.cpp  Container.h  MatHelper.c  MatHelper.h  main.cpp
app/src/main/cpp/include-extra/: cairo-features.h  pixman-version.h
app/src/main/java/com/mrap/compass/: CompassNativeActivity.java
app/src/main/res/layout/: compass_text_widget.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/mrap/compass/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
